# crewnews

./: README.md  crewnews.py
crewnews/: README.md  pyproject.toml  report.md
crewnews/src/crewnews/: crew.py  main.py
